# GMXTraj

./: CMakeLists.txt  README.md  libgmxtraj.pc.in
example/: CMakeLists.txt.in  main.cpp
include/: gmx_traj.hpp  xdrfile.h  xdrfile_trr.h  xdrfile_xtc.h
src/: gmx_traj.cpp
